--- a/My Website/index.html
+++ b/My Website/index.html
@@ -30,10 +30,10 @@
                   Dropdown
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Action asdasd</a></li>
+                  <li><a class="dropdown-item" href="#">Anotherasdasd action</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="#">Something easdsalse here</a></li>
                 </ul>
               </li>
               <li class="nav-item">
@@ -42,7 +42,7 @@
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="btn btn-outline-success" type="submit">Seadasdsrch</button>
             </form>
           </div>
         </div>
