--- a/My Website/index.html
+++ b/My Website/index.html
@@ -30,7 +30,7 @@
                   Dropdown
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Our goals</a></li>
+                  <li><a class="dropdown-item" href="#">Merge this man</a></li>
                   <li><a class="dropdown-item" href="#">Read about our goals</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Our vision</a></li>
