--- a/My Website/index.html
+++ b/My Website/index.html
@@ -30,10 +30,10 @@
                   Dropdown
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="#">Merge this man</a></li>
-                  <li><a class="dropdown-item" href="#">Read about our goals</a></li>
+                  <li><a class="dropdown-item" href="#">Change this issue 1</a></li>
+                  <li><a class="dropdown-item" href="#">Change this isssue 2</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Our vision</a></li>
+                  <li><a class="dropdown-item" href="#">Cgange this - issue 3</a></li>
                 </ul>
               </li>
               <li class="nav-item">
