--- a/My Website/index.html
+++ b/My Website/index.html
@@ -34,6 +34,8 @@
                   <li><a class="dropdown-item" href="#">Change this isssue 2</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="#">Cgange this - issue 3</a></li>
+                  <li><a class="dropdown-item" href="#">Cgange this - issue 3</a></li>
+                  <li><a class="dropdown-item" href="#">Cgange this - issue 3</a></li>
                 </ul>
               </li>
               <li class="nav-item">
